Fix sidebar navigation link spacing after earlier fix.

--- a/gobotany/static/sass/site.scss
+++ b/gobotany/static/sass/site.scss
@@ -557,6 +557,10 @@ header {
             }
         }
     }
+    nav a {
+        display: inline-block;
+        margin-left: 10px;
+    }
     .box {
         background: #fff;
         border: 1px solid $border-green;
